fix dark mode and layout of devices page

--- a/assets/scss/dark.scss
+++ b/assets/scss/dark.scss
@@ -37,4 +37,7 @@
     background: adjust-color(green, $alpha: -0.8);
   }
 
+  .device-type-cell img {
+    filter: #{"invert()"};
+  }
 }
